printing the invoice directly from the browser. - Styled invoice layout with responsive design and print-specific styles. - Updated global styles to manage visibility during print. - Created Fatora.module.css for invoice-specific styles. - Minor fixes and improvements in the Footer component.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -617,3 +617,22 @@
 }
 
 
+@media print {
+        
+          #invoice, #invoice * {
+            visibility: visible;
+          }
+          #invoice {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            box-shadow: none;
+            border: none;
+          }
+          .no-print {
+            display: none !important;
+          }
+        }
